# AI_Camera_Development_Board_Vision_Sensor_Board_Powered_By_ESP32

Eagle_SCH&PCB/1.0/: AI Camera V1.0.brd  AI Camera V1.0.sch
example/V1.0/AICamera_demo/Blink_LED/: Blink_LED.ino
example/V1.0/AICamera_demo/Camera_TFCard/: Camera_TFCard.ino
example/V1.0/AICamera_demo/HTTP_Recogition/: HTTP_Recogition.ino
example/V1.0/AICamera_demo/RGB_Light/: RGB_Light.ino
example/V1.0/AICamera_demo/Screen/: Screen.ino
factory_firmware/: readme.md
factory_sourcecode/AICamera_V1/: AICamera_V1.ino
factory_sourcecode/AICamera_V1/src/: AICamera_V1.h  audio.h
factory_sourcecode/AICamera_V1/src/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_AIChat.c  ui_AIChat.h  ui_AIChatExitScreen.c  ui_AIChatExitScreen.h  ui_AIChatMenu.c  ui_AIChatMenu.h  ui_AIChatSrc.c  ui_AIChatSrc.h  ui_AIRecognition.c  ui_AIRecognition.h  ui_AIRecognitionExitScr.c  ui_AIRecognitionExitScr.h  ui_AIRecognitionSave.c  ui_AIRecognitionSave.h  ui_AIRecognitionScr.c  ui_AIRecognitionScr.h  ui_NetworkConfigure.c  ui_NetworkConfigure.h  ui_RGBLight.c  ui_RGBLight.h  ui_ResetToFactory.c  ui_ResetToFactory.h  ui_SDCard.c  ui_SDCard.h  ui_ScreenBrightness.c  ui_ScreenBrightness.h  ui_ServerConnectSrc.c  ui_ServerConnectSrc.h  ui_SettingScr.c  ui_SettingScr.h  ui_SettingSrcMenu.c  ui_SettingSrcMenu.h  ui_ShotdownScr.c  ui_ShotdownScr.h  ui_SplashScr.c  ui_SplashScr.h  (+63 more)
libraries/AI_VOX/src/: ai_vox_engine.h  audio_input_device.h  audio_output_device.h  i2s_pdm_audio_input_device.cpp  i2s_pdm_audio_input_device.h  i2s_std_audio_output_device.cpp  i2s_std_audio_output_device.h
(+60 files in other folders)
