SET(SOURCES ui_SplashScr.c
    ui_SettingScr.c
    ui_SettingSrcMenu.c
    ui_ResetToFactory.c
    ui_RGBLight.c
    ui_SDCard.c
    ui_ScreenBrightness.c
    ui_WiFiNetwork.c
    ui_NetworkConfigure.c
    ui_AIRecognitionScr.c
    ui_AIRecognition.c
    ui_AIRecognitionSave.c
    ui_AIChatSrc.c
    ui_AIChatMenu.c
    ui_AIChat.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_elecrow_logo_png.c
    ui_img_lv2_ai_setting_png.c
    ui_img_icon_wifi_link_01_png.c
    ui_img_icon_wifi_link_02_png.c
    ui_img_icon_wifi_link_03_png.c
    ui_img_icon_wifi_link_04_png.c
    ui_img_icon_wifi_link_05_png.c
    ui_img_icon_wifi_no_link_01_png.c
    ui_img_icon_return_01_png.c
    ui_img_icon_sd_card_01_png.c
    ui_img_lv2_ai_photo_png.c
    ui_img_icon_fill_light_off_png.c
    ui_img_icon_fill_light_on_png.c
    ui_img_95829391.c
    ui_img_icon_return_02_png.c
    ui_img_icon_recognition_effect_01_png.c
    ui_img_lv2_ai_dialogue_png.c
    ui_img_icon_ai_dialogue_server_elecrow_01_png.c
    ui_img_icon_ai_dialogue_server_xiaozhi_01_png.c
    ui_img_icon_voice_01_png.c)

add_library(ui ${SOURCES})
